--- a/public/assets/color.css
+++ b/public/assets/color.css
@@ -18,6 +18,6 @@
     color : #555;
 }
 
-.c-warning {
+.c-warning, .c-success, .c-info {
     color : #f9f9f9;
 }
